--- a/SingleProjectPage.html
+++ b/SingleProjectPage.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="static/favicon.ico" />
 
   <title>Peyton Tiroff</title>
 
@@ -24,27 +24,6 @@
     </head>
 
     <body>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="nav-container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Peyton Tiroff</a>
-            <!-- I want to get this brand label to adjust width to match the tabs, and have the other three parts of the tab align to the right-->
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
       <!--http://www.bootply.com/74926#-->
       <div class="container-fluid">
         <div class="row">
