--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!--
-
-This is a nice improvement over last week's version. Good to see you have some more control over your content and are still able to keep that 'tabbed' effect you were looking for
-
-Now that you've got your layout here, start thinking about what real content you'll want to include. As you start putting that in there, you'll be able to style for your site's content rather than placeholders
-
-With the way you've set this up, I think it would be cool to explore using solely the left sidebar as your navigation rather than both (as you alluded to in your notes). I find this to be an interesting treatment, and one not so often done. The way you are handling the tabs on mobile works nicely as well, and with some styles (perhaps a fixed position), they could be really slick
-
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +7,7 @@ With the way you've set this up, I think it would be cool to explore using solel
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="static/favicon.ico" />
 
   <title>Peyton Tiroff</title>
 
@@ -26,7 +16,11 @@ With the way you've set this up, I think it would be cool to explore using solel
 
   <link href="static/styles.css" rel="stylesheet">
 
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- I'm trying to get this cool add-on to work on my page, but my page load time drops massively and it doesn't work. It looks like it matches the setup instructions on github and on the demo page (http://caseyscarborough.com/github-activity/). Any ideas whats up-->
+ <!--  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
+ <link rel="stylesheet" href="github-activity-0.1.4.min.css"> -->
+
+ <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -49,16 +43,13 @@ With the way you've set this up, I think it would be cool to explore using solel
           </div>
           <div class="col-xs-12 col-sm-11 tab-content">
             <!-- Column containing content of tab-->
-            <div class="row">
-              <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-4 pull-right red">
-                <!-- Image dissapears on small screens, can't get to center-->
-                <!-- Looks to me like the image stays for all screens, so maybe you fixed this. As for centering it, try using the 'center-block' instead of 'left-block' class like you did for the image below -->
-                <img src="static/headshot.jpg" title="This is a picture of Peyton" class="img-circle left-block">
+            <div class="row top-row">
+              <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-4 pull-right">
+                <img id='img-headshot' src="static/headshot.jpg" title="This is a picture of Peyton" class="img-circle left-block">
               </div>
               <!-- <div id="landing-content-text" class="col-xs-12 col-lg-10"> -->
               <div id="intro-header" class="col-xs-12 col-md-8 col-lg-8 text-right">
-                <!-- is there some way to get this to align vertically with the image?-->
-                <!-- The easiest way is going to be to apply a top margin or padding to the text column, but not the image one. A more difficult method would be with Flexbox, which is quite powerful for controlling layouts, though has a steeper learning curve -->
+                <!-- I spent a ton of time trying to get this to center, but I couldn't get it to align with the image. Flexbox/marigins seemed to break the bootstraps layout-->
                 <h1>My name is Peyton Tiroff, and I make things</h1>
                 <p> Digitally, usually</p>
               </div>
@@ -70,10 +61,9 @@ With the way you've set this up, I think it would be cool to explore using solel
                 <img src="http://placehold.it/1000x500" title="Some attention grabbing piece of code trickery" class="img-rounded img-responsive center-block">
               </div>
               <div class="row">
-                <div id="activity" class="col-lg-12 text-center">
+                <div id="activity" class="col-xs-12 text-center">
                   <h3> This is my activity on FaceStaHub </h3>
-                  <!-- this title jumps up to above the first text on small screens, along with circle picture appearing-->
-                  <img src="http://placehold.it/500x250" title="This probably won't be an image but some sort of embeded widget" class="img-rounded img-responsive center-block">
+                  <div id="feed"></div>
                 </div>
               </div>
               <!-- </div> -->
@@ -82,13 +72,18 @@ With the way you've set this up, I think it would be cool to explore using solel
         </div>
         <!--Close of main row-->
       </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>
-      window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
-    </script>
-    <script src="static/bootstrap/js/bootstrap.min.js"></script>
-  </body>
+      <!-- Bootstrap core JavaScript-->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <script>
+        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+      </script>
+      <script src="static/bootstrap/js/bootstrap.min.js"></script>
+      <!-- see note above about Activity Stream-->
+<!--       <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+  <script src="github-activity-0.1.4.min.js"></script> -->
+  <!--My javascript-->
+  <!-- <script src="script.js"></script> -->
+  <script src="//code.jquery.com/jquery-1.11.0.js"></script>
+</body>
 
-  </html>
+</html>
