fix broken image links

--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -51,7 +51,7 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
-                <img src="static/hw2pt2.png" alt="My First D3 visual" class="center-block img-responsive">
+                <img src="static/hw2pt2.PNG" alt="My First D3 visual" class="center-block img-responsive">
                 <div class="caption">
                   <h4>First pure d3 visual with fake data</h4>
                   <p>Just learning the basics of d3</p>
@@ -70,7 +70,7 @@
             <div class="clearfix visible-md-block"></div>
             <div class="col-sm-6 col-md-4 col-lg-3 pull-left">
               <div class="thumbnail">
-                <img src="static/hw2pt3.png" alt="Chart of car MPG based on distance traveled" class="center-block img-responsive">
+                <img src="static/hw2pt3.PNG" alt="Chart of car MPG based on distance traveled" class="center-block img-responsive">
                 <div class="caption">
                   <h4>Miles Per Gallon vs Distance Traveled</h4>
                   <p>Something a little more complex as a cut my teeth on d3</p>
