fixing broken image paths

--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
-                <img src="static/first-chart.png" alt="My first data visualization" class="center-block img-responsive"> <!-- might make these images rectangular -->
+                <img src="static/firstchart.png" alt="My first data visualization" class="center-block img-responsive"> <!-- might make these images rectangular -->
                 <div class="caption">
                   <h4>My Very First Chart</h4>
                   <p>Made using c3.js, visualizing some very interesting data collected about our class</p>
