updates from feedback

--- a/SingleProjectPage.html
+++ b/SingleProjectPage.html
@@ -12,9 +12,9 @@
   <title>Peyton Tiroff</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="static/styles.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -81,7 +81,7 @@
   <script>
     window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
   </script>
-  <script src="static/bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
