--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -11,9 +11,9 @@
   <title>Peyton Tiroff</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="static/styles.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -97,6 +97,6 @@
     ================================================== -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
   </html>
