--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <title>Peyton Tiroff</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="static/styles.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 
   <!-- I'm trying to get this cool add-on to work on my page, but my page load time drops massively and it doesn't work. It looks like it matches the setup instructions on github and on the demo page (http://caseyscarborough.com/github-activity/). Any ideas whats up-->
- <!--  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
- <link rel="stylesheet" href="github-activity-0.1.4.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
+ <link rel="stylesheet" href="css/github-activity-0.1.4.min.css">
 
  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -44,25 +44,23 @@
           <div class="col-xs-12 col-sm-11 tab-content">
             <!-- Column containing content of tab-->
             <div class="row top-row">
-              <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-4 pull-right">
+              <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-3 vcenter pull-right blue">
                 <img id='img-headshot' src="static/headshot.jpg" title="This is a picture of Peyton" class="img-circle left-block">
               </div>
               <!-- <div id="landing-content-text" class="col-xs-12 col-lg-10"> -->
-              <div id="intro-header" class="col-xs-12 col-md-8 col-lg-8 text-right">
+              <div id="intro-header" class="col-sm-12 col-md-8 col-lg-8 text-right red vcenter">
                 <!-- I spent a ton of time trying to get this to center, but I couldn't get it to align with the image. Flexbox/marigins seemed to break the bootstraps layout-->
                 <h1>My name is Peyton Tiroff, and I make things</h1>
                 <p> Digitally, usually</p>
               </div>
-              <div id="intro-text" class="col-xs-12  text-center">
+              <div id="intro-text" class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8  text-center">
                 <p class="text-center">
                   Inspect anything brought into the house. Mark territory pee in human's bed until he cleans the litter box. Scratch leg; meow for can opener to feed me eat a plant, kill a hand lick the other cats.
                 </p>
-                <h4>This here is something that is attention-grabbing and maybe a bit of impressive  coding as well</h4>
-                <img src="http://placehold.it/1000x500" title="Some attention grabbing piece of code trickery" class="img-rounded img-responsive center-block">
               </div>
               <div class="row">
-                <div id="activity" class="col-xs-12 text-center">
-                  <h3> This is my activity on FaceStaHub </h3>
+                <div id="activity" class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
+                  <h3 class="text-center"> Github Activity </h3>
                   <div id="feed"></div>
                 </div>
               </div>
@@ -77,13 +75,13 @@
       <script>
         window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
       </script>
-      <script src="static/bootstrap/js/bootstrap.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
       <!-- see note above about Activity Stream-->
-<!--       <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-  <script src="github-activity-0.1.4.min.js"></script> -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+  <script src="js/github-activity-0.1.4.min.js"></script>
   <!--My javascript-->
-  <!-- <script src="script.js"></script> -->
-  <script src="//code.jquery.com/jquery-1.11.0.js"></script>
+  <script src="js/script.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.0.js"></script>
 </body>
 
 </html>
