removed debugging coloring

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
           <div class="col-xs-12 col-sm-11 tab-content">
             <!-- Column containing content of tab-->
             <div class="row top-row">
-              <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-3 vcenter pull-right blue">
+              <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-3 vcenter pull-right">
                 <img id='img-headshot' src="static/headshot.jpg" title="This is a picture of Peyton" class="img-circle left-block">
               </div>
               <!-- <div id="landing-content-text" class="col-xs-12 col-lg-10"> -->
-              <div id="intro-header" class="col-sm-12 col-md-8 col-lg-8 text-right red vcenter">
+              <div id="intro-header" class="col-sm-12 col-md-8 col-lg-8 text-right vcenter">
                 <!-- I spent a ton of time trying to get this to center, but I couldn't get it to align with the image. Flexbox/marigins seemed to break the bootstraps layout-->
                 <h1>My name is Peyton Tiroff, and I make things</h1>
                 <p> Digitally, usually</p>
