added elevator pitch and resume and color guide tabs

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
   <!-- I'm trying to get this cool add-on to work on my page, but my page load time drops massively and it doesn't work. It looks like it matches the setup instructions on github and on the demo page (http://caseyscarborough.com/github-activity/). Any ideas whats up-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
- <link rel="stylesheet" href="css/github-activity-0.1.4.min.css">
+  <link rel="stylesheet" href="css/github-activity-0.1.4.min.css">
 
- <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -37,8 +37,10 @@
             <ul class="nav nav-tabs">
               <!-- one idea to keep the number of tabs on this side low - have higher-level catgories that, when clicked on, get pinned to the top and subcategory tabs appear below-->
               <li class="active"><a href="#">This Is Peyton</a></li>
-              <li><a href="SingleProjectPage.html">My Big Project</a></li>
-              <li><a href="MultiItemPage.html">Odds &amp; Ends</a></li>
+              <li><a href="#">Resume</a></li>
+              <li><a href="SingleProjectPage.html">Research: Energy Flows</a></li>
+              <li><a href="#">Information Visualization: Color Guide</a></li>
+              <li><a href="MultiItemPage.html">Small Projects</a></li>
             </ul>
           </div>
           <div class="col-xs-12 col-sm-11 tab-content">
@@ -55,7 +57,9 @@
               </div>
               <div id="intro-text" class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8  text-center">
                 <p class="text-center">
-                  Inspect anything brought into the house. Mark territory pee in human's bed until he cleans the litter box. Scratch leg; meow for can opener to feed me eat a plant, kill a hand lick the other cats.
+                  I am a Northeastern Student currently getting my degree in Computer Science, with a minor in Interaction Design
+                  <br>
+                  I worked at Medical Information Technology in 2016 for my first co-op, and I've also done research with Professor Kristian Kloeckl on visualizing the energy usage of campus buildings. These experiences have me looking to get into web programming and finding ways to communicate advanced models and concepts to a general audience through easy to use and understand visualizations and interaction interfaces, but I also find almost all aspects of computer science interesting, and love the wide variety of fields that this study can be relevant in. Thanks for checking out my website!
                 </p>
               </div>
               <div class="row">
@@ -78,10 +82,10 @@
       <script src="js/bootstrap.min.js"></script>
       <!-- see note above about Activity Stream-->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-  <script src="js/github-activity-0.1.4.min.js"></script>
-  <!--My javascript-->
-  <script src="js/script.js"></script>
-  <script src="https://code.jquery.com/jquery-1.11.0.js"></script>
-</body>
+      <script src="js/github-activity-0.1.4.min.js"></script>
+      <!--My javascript-->
+      <script src="js/script.js"></script>
+      <script src="https://code.jquery.com/jquery-1.11.0.js"></script>
+    </body>
 
-</html>
+    </html>
