renamed SingleProjectPage to EnergyFlows and added resume and color guide tabs

--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -32,8 +32,10 @@
             <!-- column containing tabs-->
             <ul class="nav nav-tabs">
               <li><a href="index.html">This Is Peyton</a></li>
-              <li class="active"><a href="#">My Big Project</a></li>
-              <li><a href="MultiItemPage.html">Odds &amp; Ends</a></li>
+              <li><a href="#">Resume</a></li>
+              <li><a href="#" class="active">Research: Energy Flows</a></li>
+              <li><a href="#">Information Visualization: Color Guide</a></li>
+              <li><a href="MultiItemPage.html">Small Projects</a></li>
             </ul>
           </div>
           <div class="col-xs-12 col-sm-11 tab-content">
