added resume and color guide tabs

--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -29,8 +29,10 @@
           <div class="col-xs-12 col-sm-1 tabs-left"> <!-- column containing tabs-->
             <ul class="nav nav-tabs">
               <li><a href="index.html">This Is Peyton</a></li>
-              <li><a href="SingleProjectPage.html">My Big Project</a></li>
-              <li class="active"><a href="#">Odds &amp; Ends</a></li>
+              <li><a href="#">Resume</a></li>
+              <li><a href="SingleProjectPage.html">Research: Energy Flows</a></li>
+              <li><a href="#">Information Visualization: Color Guide</a></li>
+              <li class="active"><a href="#">Small Projects</a></li>
             </ul>
           </div>
           <div class="col-xs-12 col-sm-11 tab-content"> <!-- Column containing content of tab-->
