updated link to SingleProjectPage to EnergyFlows

--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -30,7 +30,7 @@
             <ul class="nav nav-tabs">
               <li><a href="index.html">This Is Peyton</a></li>
               <li><a href="#">Resume</a></li>
-              <li><a href="SingleProjectPage.html">Research: Energy Flows</a></li>
+              <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
               <li><a href="#">Information Visualization: Color Guide</a></li>
               <li class="active"><a href="#">Small Projects</a></li>
             </ul>
