--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <!-- one idea to keep the number of tabs on this side low - have higher-level catgories that, when clicked on, get pinned to the top and subcategory tabs appear below-->
               <li class="active"><a href="#">This Is Peyton</a></li>
               <li><a href="#">Resume</a></li>
-              <li><a href="SingleProjectPage.html">Research: Energy Flows</a></li>
+              <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
               <li><a href="#">Information Visualization: Color Guide</a></li>
               <li><a href="MultiItemPage.html">Small Projects</a></li>
             </ul>
