--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
       <div class="container-fluid">
         <div class="row">
           <!--main row of page-->
-          <div class="col-xs-12 col-sm-1 tabs-left">
+          <div class="col-xs-12 col-sm-2 col-md-1 tabs-left"> <!--This is still screwy - can only get responsive resizing of tabs on sm breakpoint-->
             <!-- column containing tabs-->
             <ul class="nav nav-tabs">
               <!-- one idea to keep the number of tabs on this side low - have higher-level catgories that, when clicked on, get pinned to the top and subcategory tabs appear below-->
               <li class="active"><a href="#">This Is Peyton</a></li>
               <li><a href="#">Resume</a></li>
               <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
-              <li><a href="#">Information Visualization: Color Guide</a></li>
+              <li><a href="#">A One Page Wonder</a></li>
               <li><a href="MultiItemPage.html">Small Projects</a></li>
             </ul>
           </div>
-          <div class="col-xs-12 col-sm-11 tab-content">
+          <div class="col-xs-12 col-sm-10 col-md-11 tab-content">
             <!-- Column containing content of tab-->
             <div class="row top-row">
               <div id="Peytons-headshot" class="col-xs-12 col-md-4 col-lg-3 vcenter pull-right">
