--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -26,16 +26,16 @@
       <!--http://www.bootply.com/74926#-->
       <div class="container-fluid">
         <div class="row">  <!--main row of page-->
-          <div class="col-xs-12 col-sm-1 tabs-left"> <!-- column containing tabs-->
+          <div class="col-xs-12 col-sm-2 col-md-1 tabs-left"> <!-- column containing tabs-->
             <ul class="nav nav-tabs">
               <li><a href="index.html">This Is Peyton</a></li>
               <li><a href="#">Resume</a></li>
               <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
-              <li><a href="#">Information Visualization: Color Guide</a></li>
+              <li><a href="#">A One Page Wonder</a></li>
               <li class="active"><a href="#">Small Projects</a></li>
             </ul>
           </div>
-          <div class="col-xs-12 col-sm-11 tab-content"> <!-- Column containing content of tab-->
+          <div class="col-xs-12 col-sm-10 col-md-11 tab-content"> <!-- Column containing content of tab-->
             <div class="col-x-12">
               <h2 class="text-center"><strong>Information Visualizations</strong></h2>
             </div>
@@ -85,8 +85,7 @@
                 <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?" class="center-block img-responsive">
                 <div class="caption">
                   <h4>Also make this into a scrolling carousel?</h4>
-                  <p>There's a good chance of this filling up very quickly</p> <!-- is there any way of getting this all to float up and smush together?-->
-                  <!-- If you are referring to the 'quickly' breaking to a new line, there isn't really. This is controlled through the width of the container, so you'd need to manually adjust for it to appear the way you want at different breakpoints -->
+                  <p>There's a good chance of this filling up very quickly</p> <
                 </div>
               </div>
             </div>
