filled in wireframe with content, restructured image layout

--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -28,55 +28,89 @@
       <div class="container-fluid">
         <div class="row">
           <!--main row of page-->
-          <div class="col-xs-12 col-sm-1 tabs-left">
+          <div class="col-xs-12 col-sm-2 col-md-1 tabs-left">
             <!-- column containing tabs-->
             <ul class="nav nav-tabs">
               <li><a href="index.html">This Is Peyton</a></li>
               <li><a href="#">Resume</a></li>
               <li><a href="#" class="active">Research: Energy Flows</a></li>
-              <li><a href="#">Information Visualization: Color Guide</a></li>
+              <li><a href="#">A One Page Wonder</a></li>
               <li><a href="MultiItemPage.html">Small Projects</a></li>
             </ul>
           </div>
-          <div class="col-xs-12 col-sm-11 tab-content">
+          <div class="col-xs-12 col-sm-10 col-md-11 tab-content">
             <!-- Column containing content of tab-->
             <div class="row">
-              <div class="col-xs-12 col-md-9">
-                <h2 class="text-center"> <strong>This is a thing I did I'd like to share </strong></h2>
-                <p>
-                  Gnaw the corn cob i am the best. Sit on the laptop play riveting piece on synthesizer keyboard and steal the warm chair right after you get up but cat snacks. Sit in box meow swat turds around the house and knock dish off table head butt cant eat out of my own dish lie on your belly and purr when you are asleep for intently sniff hand scratch leg; meow for can opener to feed me. My left donut is missing, as is my right knock over christmas tree, hiss at vacuum cleaner, meow. Climb leg touch water with paw then recoil in horror yet intently sniff hand, but spot something, big eyes, big eyes, crouch, shake butt, prepare to pounce.
-                  <br>
-                  <br>
-                  <h4 class="text-center">How I did the thing</h4>
-                  <br> Caticus cuteicus chase the pig around the house. Stare at wall turn and meow stare at wall some more meow again continue staring stare at ceiling, for poop in litter box, scratch the walls. Mrow give attitude, paw at beetle and eat it before it gets away so play riveting piece on synthesizer keyboard russian blue chase ball of string but put toy mouse in food bowl run out of litter box at full speed . Chase ball of string the dog smells bad favor packaging over toy pee in human's bed until he cleans the litter box but find something else more interesting, and chew foot intently sniff hand. Shove bum in owner's face like camera lens. Meowwww paw at beetle and eat it before it gets away and kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff kitty loves pigs eat a plant, kill a hand. Walk on car leaving trail of paw prints on hood and windshield kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff chase imaginary bugs.
-                  <br>
-                  <br>
-                  <h4 class="text-center">Why I did the thing</h4>
-                  <br> Vommit food and eat it again sit on human. Lick arm hair. The dog smells bad curl up and sleep on the freshly laundered towels throwup on your pillow, yet human give me attention meow scream at teh bath sleep on dog bed, force dog to sleep on floor. Cat is love, cat is life. Mark territory cats go for world domination and intently sniff hand, and kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff. Chase after silly colored fish toys around the house paw at beetle and eat it before it gets away and if it smells like fish eat as much as you wish but knock over christmas tree for play time, or poop in litter box, scratch the walls.
-                </p>
-                <img src="http://placehold.it/500x240" title="Either a widget or demonstration of project, else maybe just larger version of a photo selected from the right sidebar" class="center-block">
-              </div>
-              <div class="col-xs-12 col-md-2">
-                <!-- Can't get this to float up next to title-->
-                <div class="row">
-                  <div class="col-xs-4 col-md-12">
-                    <img src="http://placehold.it/140x140" title="This is a picture of  a project" class="img-responsive center-block">
-                  </div>
-                  <div class="col-xs-4 col-md-12">
-                    <img src="http://placehold.it/140x140" title="This is a picture of a project " class="img-responsive center-block">
-                    <!--want to add more space to these, maybe make into verticle carousel/rotating image belt-->
-                  </div>
-                  <div class="col-xs-4 col-md-12">
-                    <img src="http://placehold.it/140x140" title="This is a picture of a project " class="img-responsive center-block">
+              <div class="col-xs-12">
+                <div class="row"> <!-- so I can pad this header with columns to line up with text below, without allowing images to float up next to header-->
+                  <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-1">
+                    <h2 class="text-center"> <strong>Northeastern Energy Flows</strong></h2>
                   </div>
                 </div>
               </div>
+              <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-1">
+                <p>
+                  This project was an investigation on novel ways to represent the energy system of the Northeastern Boston campus led by Professor Kristian Kloeckl. This data was a classic example of abstract information without 'physical' visual representation that had important implications for those operating from within the system it came from. Decisions on cost and supplier venue, infrastructure development, and distribution of energy resources must be made based on a robust understanding of this data, and all users of this energy have a right to an understanding of the system as all will be affected by the implications it has on our environment. This project aimed to develop a visualzation of this data to fufill all these needs. The project was developed over the summer of 2015 and was evenutally presented as an exhibition in Gallery 360 on campus
+                  <br>
+                  <br>
+                </p>
+              </div>
+              <div class="col-md-3 visible-md-block visible-lg-block">
+                <img src="static/energy1.jpg" class="img-responsive center-block">
+              </div>
+              <div class="col-xs-12">
+                <div class="row"> 
+                  <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-1">
+                    <h4 class="text-center">My Involvement</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="visible-md-block visible-lg-block col-md-3 col-md-offset-1 vcenter">
+                <img src="static/energy2.jpg" class="img-responsive center-block">
+              </div>
+              <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-0">                
+                <p>
+                 I got involved in this project through the Honors Early Research Assistanceship program. I recieved an email about this program at the end of my spring semester my freshman year and was drawn to Professor Kloeckl's project because of its cross-disipline nature. After Kloeckl decided to hire me for the project, I stayed on campus during the Summer 1 term (May and June) to take classes and work on this study. I was responsible for developing the interface in Processing, a java-based open-source programming language meant as an "electronic sketchbook" for projects in the visual arts. I worked alongside Yuecan Fan, who ran analysis on the data itself, and Mavas Dabas, who built the Mongo database to contain the data. 
+                 <br>
+                 <br>
+               </p>
+             </div>
+             <div class="row"> 
+              <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-1">
+                <h4 class="text-center">Reflection on participation</h4>
+              </div>
+            </div>
+
+            <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-1">                
+              <p>
+                This was my first time working on a large-scale coding project outside of classwork. It was a great opportunity to finally apply what I had been learning in class and find how concepts learned in class applied to the actual process of developing software. This work was also the source of my interest in data visualization, which I am continuing to pursue today. 
+              </p>
+            </div> <!--need to add gap here/center everything-->
+            <div class="col-md-3 visible-md-block visible-lg-block">
+              <img src="static/energy3.jpg" class="img-responsive center-block">
+            </div>
+            <div class="col-xs-offset-1 col-xs-10">
+              <div class="embed-responsive embed-responsive-16by9">
+                <!-- why is this embeded video stretched vertically?-->
+                <iframe src="https://www.youtube.com/embed/8ulJf-5w1co"></iframe>
+              </div>
+            </div>
+            <div class="col-xs-offset-1 col-xs-10 visible-xs-block visible-sm-block">
+            <img src="static/energy1.jpg" class="img-responsive center-block">
+            </div>
+            <div class="col-xs-offset-1 col-xs-10 visible-xs-block visible-sm-block">
+              <img src="static/energy2.jpg" class="img-responsive center-block">
+              <!--want to add more space to these, maybe make into verticle carousel/rotating image belt-->
+            </div>
+            <div class="col-xs-offset-1 col-xs-10 visible-xs-block visible-sm-block">
+              <img src="static/energy3.jpg" class="img-responsive center-block">
             </div>
           </div>
         </div>
       </div>
-      <!--Close of main row-->
     </div>
+    <!--Close of main row-->
+  </div>
   <!-- Bootstrap core JavaScript
   ================================================== -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
