edits based on feedback (tabs responsive, header is centered, smaller GitHub Activity

--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -33,7 +33,7 @@
             <ul class="nav nav-tabs">
               <li><a href="index.html">This Is Peyton</a></li>
               <li><a href="#">Resume</a></li>
-              <li><a href="#" class="active">Research: Energy Flows</a></li>
+              <li class="active"><a href="#">Research: Energy Flows</a></li>
               <li><a href="#">A One Page Wonder</a></li>
               <li><a href="MultiItemPage.html">Small Projects</a></li>
             </ul>
