resized video player column

--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -95,7 +95,7 @@
               </div>
             </div>
             <div class="col-xs-12 spacer"></div>
-            <div class="col-xs-offset-1 col-xs-10">
+            <div class="col-xs-offset-1 col-xs-10 col-md-8 col-md-offset-2">
               <div class="thumbnail text-center ">
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe src="https://www.youtube.com/embed/8ulJf-5w1co"></iframe>
