tabs are now responsive, additional changes to layout

--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -26,7 +26,7 @@
       <!--http://www.bootply.com/74926#-->
       <div class="container-fluid">
         <div class="row">  <!--main row of page-->
-          <div class="col-xs-12 col-sm-2 col-md-1 tabs-left"> <!-- column containing tabs-->
+          <div class="col-xs-12 col-sm-2 tabs-left"> <!-- column containing tabs-->
             <ul class="nav nav-tabs">
               <li><a href="index.html">This Is Peyton</a></li>
               <li><a href="#">Resume</a></li>
@@ -35,7 +35,7 @@
               <li class="active"><a href="#">Small Projects</a></li>
             </ul>
           </div>
-          <div class="col-xs-12 col-sm-10 col-md-11 tab-content"> <!-- Column containing content of tab-->
+          <div class="col-xs-12 col-sm-10 tab-content"> <!-- Column containing content of tab-->
             <div class="col-x-12">
               <h2 class="text-center"><strong>Information Visualizations</strong></h2>
             </div>
