--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <div class="row">
           <!--main row of page-->
-          <div class="col-xs-12 col-sm-2 col-md-1 tabs-left">
+          <div class="col-xs-12 col-sm-2 tabs-left">
             <!-- column containing tabs-->
             <ul class="nav nav-tabs">
               <li><a href="index.html">This Is Peyton</a></li>
@@ -38,7 +38,7 @@
               <li><a href="MultiItemPage.html">Small Projects</a></li>
             </ul>
           </div>
-          <div class="col-xs-12 col-sm-10 col-md-11 tab-content text-justify">
+          <div class="col-xs-12 col-sm-10 tab-content text-justify">
             <!-- Column containing content of tab-->
             <div class="row flex">
               <div class="col-xs-12">
@@ -48,14 +48,14 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xs-10 col-xs-offset-1 col-md-7 col-md-offset-1">
+              <div class="col-xs-10 col-xs-offset-1 col-md-6 col-lg-7">
                 <p>
                   This project was an investigation on novel ways to represent the energy system of the Northeastern Boston campus led by Professor Kristian Kloeckl. This data was a classic example of abstract information without 'physical' visual representation that had important implications for those operating from within the system it came from. Decisions on cost and supplier venue, infrastructure development, and distribution of energy resources must be made based on a robust understanding of this data, and all users of this energy have a right to an understanding of the system as all will be affected by the implications it has on our environment. This project aimed to develop a visualzation of this data to fufill all these needs. The project was developed over the summer of 2015 and was evenutally presented as an exhibition in Gallery 360 on campus
                   <br>
                   <br>
                 </p>
               </div>
-              <div class="col-md-4 visible-md-block visible-lg-block">
+              <div class="col-md-5 col-lg-4 visible-md-block visible-lg-block">
                 <div class="thumbnail">
                   <img src="static/energy1.jpg" class="img-responsive center-block">
                 </div>
